--- a/contactus.html
+++ b/contactus.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About Us</title>
-    <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="contactus.css">
 </head>
 <body>
     <div class="about-section">
         <h1>About Us</h1>
-        <p>Welcome to our website! We are dedicated to providing you with the best experience.</p>
-        <p>Our team is passionate, innovative, and always here to help.</p>
     </div>
 </body>
 </html>
