--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="aboutus.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="contactus.html">Contact Us</a>
+            <a href="aboutus.html">About Us</a>
+        </nav>
+    </header>
     <div class="about-section">
         <h1>About Us</h1>
         <p>Welcome to our website! We are dedicated to providing you with the best experience.</p>
