--- a/contactus.html
+++ b/contactus.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="contactus.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="contactus.html">Contact Us</a>
+            <a href="aboutus.html">About Us</a>
+        </nav>
+    </header>
     <div class="about-section">
-        <h1>About Us</h1>
+        <h1>Contact Us</h1>
     </div>
 </body>
 </html>
