--- a/home.html
+++ b/home.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="contactus.html">Contact Us</a>
+            <a href="aboutus.html">About Us</a>
+        </nav>
+    </header>
     <div class="about-section">
         <center>
             <h1>Home</h1>
