home changed to index

--- a/contactus.html
+++ b/contactus.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About Us</title>
     <link rel="stylesheet" href="contactus.css">
+    <style>
+        nav {
+            position: fixed;
+            left: 42%;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="contactus.html">Contact Us</a>
             <a href="aboutus.html">About Us</a>
         </nav>
