--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="about-section">
-        <h1>About Us</h1>
+        <h1>ABOUT US</h1>
         <p>Welcome to our website! We are dedicated to providing you with the best experience.</p>
         <p>Our team is passionate, innovative, and always here to help.</p>
     </div>
